# capybara_node

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  capybara_running_wild.cbp  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml  setup.py
launch/: capybara_launcher.launch  capybara_launcher.launch~  capybara_movebase.launch  emergency_compliant_capybara_launcher.launch  emergency_compliant_capybara_launcher.launch~  sapienzBara.launch
nodes/: capybara_module.py  capybara_motion.py  capybara_motion.py~  frames.gv  shinyCapybara.py
src/: #packets.h#  capybara.cpp  capybara.h  dashboard.cpp  dashboard.h  hexmessage.cpp  hexmessage.cpp~  hexmessage.h  odometrycalib_packet.cpp  odometrycalib_packet.h  packet_handler.cpp  packet_handler.h  packets.cpp  packets.cpp~  packets.h  packets.h~  pid_packet.cpp  pid_packet.h  platform_defs.cpp  platform_defs.h  querycommands_packet.cpp  querycommands_packet.h  rodent.cpp  screenWriter.h  serialFriend.cpp  serialFriend.h  speed_packet.cpp  speed_packet.h  state_packet.cpp  state_packet.h  wheelSpeed_packet.c  wheelSpeed_packet.cpp  wheelSpeed_packet.cpp~  wheelSpeed_packet.h
